# 835

./: .gitignore  .pre-commit-config.yaml  835.code-workspace  835.py  835_config.example.json  AUTOMATED_BUILD.md  BUILD_INSTALLER.md  CHANGELOG_CONFIG_CLEANUP.md  CONFIG_README.md  DEPLOYMENT_TEST_CHECKLIST.md  KNOWN_LIMITATIONS.md  QUICKSTART.md  VERSION_SYNC.md  X12.txt  build_installer.spec  categorization.py  colloquial.py  config.py  database.py  dictionary.py  generate_deductible_collection_reports.py  gui.py  installer.iss  parser_835.py  pyproject.toml  rates.py  redactor.py  requirements.txt  temp_check_claim.py  validation.py
.claude/: settings.local.json
.github/workflows/: build-installer.yml  build-on-push.yml
data/: fair_health_baseline.csv
hcpcs_jan2026/: HCPC2026_JAN_ANWEB.xlsx  HCPC2026_JAN_ANWEB_Transaction Report.xlsx
reference/835_parser/: .pre-commit-config.yaml  LICENSE.txt  categorization.py  colloquial.py  database.py  generate_deductible_collection_reports.py  installer.iss  validation.py
reference/835_parser/.github/workflows/: build-installer.yml
reports/: rescuenet_conflict_resolution.csv  rescuenet_conflict_resolution_with_categories.csv  rescuenet_conflicts.csv  rescuenet_unique_denial_codes.csv
scripts/: check_fh_units.py
tidbyt-apps/: README.md  render-and-push-persistent.sh  render-and-push.sh
tidbyt-apps/hello_world/: hello_world.star
tidbyt-apps/template/: template.star
